# xabironelson-codex

./: .eslintrc.json  .gitignore  .gitignore.ts  README.md  cli.py  cli_tests.py  constants.py  package-lock.json  package.json  pyproject.toml  resultado.txt  resultado1.md  tsconfig.json  xabiro.yaml
benchmark/: benchmark-compare.ts  benchmark-ink.tsx  benchmark-opentui.ts  data-provider.ts  frame-meter.ts  gutenberg.txt
data/: dtos.py  mappers.py
data/client/: lite_llm_client.py
data/repository/: llm_repository.py
domain/boundary/: llm_repository.py
domain/commands/: handlers.py  registry.py
domain/models/: command_result.py  model_errors.py  response_model.py
domain/tools/: list_files_inside_directory_tool.py  read_file_content_tool.py  tool.py
domain/use_case/: command_use_case.py  execute_tool_use_case.py  generate_completion_use_case.py
models/: config.py  tool_model.py
src/: cli.tsx  config.ts  constants.ts  index.ts
src/adapters/cli/: cli.tsx  repl.tsx  tui.ts
src/adapters/gemini/: adapter.ts  mapper.ts  schemas.ts
src/adapters/kimi/: adapter.ts  mapper.ts  schemas.ts
src/adapters/llm/: gemini-adapter.ts  llm-client.ts  llm-repository.ts  mappers.ts  provider-adapter.ts  provider-factory.ts  schemas.ts
src/adapters/persistence/: list-files-tool.ts  read-file-tool.ts  write-file-tool.ts
src/adapters/tools/: tool-registry.ts
src/application/ports/: dtos.ts  llm-repository.ts  tool.ts
src/application/use-cases/: execute-tool.ts  (+2 more)
src/data/: dtos.ts  mappers.ts
src/presentation/: repl.tsx
src/utils/: logger.ts
utils/: logger.py
(+54 files in other folders)
